# projet_teledetection

./: .gitignore  tarball.sh
NUAGES_SRC/: .clang-format  CMakeLists.txt  Makefile  class.c  class.h  compute.c  compute.h  ealloc.c  ealloc.h  image.c  image.h  main.c  main_auto.c  vector.c  vector.h
NUAGES_SRC/EXE/: CMakeCache.txt  Makefile  cmake_install.cmake
